# future-map

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
src/future_map/: __init__.py  future_map.py
tests/: test_future_map.py
